--- a/Robot Controller.ipynb
+++ b/Robot Controller.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "maze-id 1-1585922604\n",
+      "maze-id 1-1586444087\n",
       "[[3, 2, 2, 2, 2, 2, 2, 2, 1],\n",
       " [0, 0, 2, 2, 2, 2, 2, 0, 0],\n",
       " [2, 0, 0, 2, 2, 2, 0, 0, 2],\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "迷宫共有 5 行 9 列，第三行第六列的元素是 0\n"
+      "迷宫共有 5 行 9 列，第三行第六列的元素是 2\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
     "columns = len(env_data[0]) \n",
     "\n",
     "#TODO 3取出模拟环境第三行第六列的元素\n",
-    "row_3_col_6 = env_data[3][6] \n",
+    "row_3_col_6 = env_data[2][5] \n",
     "\n",
     "print(\"迷宫共有\", rows, \"行\", columns, \"列，第三行第六列的元素是\", row_3_col_6)"
    ]
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -178,7 +178,7 @@
      "text": [
       "['__add__', '__class__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n",
       "[[3, 2, 2, 2, 2, 2, 2, 2, 1], [0, 0, 2, 2, 2, 2, 2, 0, 0], [2, 0, 0, 2, 2, 2, 0, 0, 2], [2, 2, 0, 0, 2, 0, 0, 2, 2], [2, 2, 2, 0, 0, 0, 2, 2, 2]]\n",
-      "<zip object at 0x10cc6dbe0>\n",
+      "<zip object at 0x1031f7780>\n",
       "[3, 2, 2, 2, 2, 2, 2, 2, 1] [0, 0, 2, 2, 2, 2, 2, 0, 0] [2, 0, 0, 2, 2, 2, 0, 0, 2] [2, 2, 0, 0, 2, 0, 0, 2, 2] [2, 2, 2, 0, 0, 0, 2, 2, 2]\n",
       "[(3, 0, 2, 2, 2), (2, 0, 0, 2, 2), (2, 2, 0, 0, 2), (2, 2, 2, 0, 0), (2, 2, 2, 2, 0), (2, 2, 2, 0, 0), (2, 2, 0, 0, 2), (2, 0, 0, 2, 2), (1, 0, 2, 2, 2)]\n",
       "迷宫中，第一行共有 7 个障碍物，第三列共有 3 个障碍物。\n"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -392,7 +392,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -463,7 +463,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -535,6 +535,7 @@
    "source": [
     "## TODO 10 从头定义、实现你的函数\n",
     "def valid_actions(env_data, loc):\n",
+    "\n",
     "    acts = []\n",
     "    for act in ['u', 'd', 'l', 'r']:\n",
     "        if is_move_valid(env_data, loc, act):\n",
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -558,7 +559,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -596,7 +597,7 @@
    "source": [
     "##TODO 11 从头定义、实现你的函数\n",
     "def move_robot(loc, act):\n",
-    "    \n",
+    "\n",
     "    move_dict = {\n",
     "        'u': (-1, 0),\n",
     "        'd': (1, 0),\n",
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -622,7 +623,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -669,7 +670,6 @@
     "import random as rd\n",
     "\n",
     "def random_choose_actions(env_data, loc):\n",
-    "\n",
     "    times = 300\n",
     "    number_of_round = 1\n",
     "    while number_of_round <= times:\n",
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -695,7 +695,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "在第174个回合找到宝藏！\n"
+      "在第258个回合找到宝藏！\n"
      ]
     }
    ],
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
